--- a/wanderingtowers.css
+++ b/wanderingtowers.css
@@ -858,7 +858,8 @@ body > .card {
   transform: translate(45%, 25%);
   aspect-ratio: 1;
   width: var(--innerTowerWidth);
-  z-index: 1;
+  z-index: 11;
+  pointer-events: none;
 }
 
 .wtw_wizard {
@@ -867,6 +868,7 @@ body > .card {
   aspect-ratio: 1/1.53;
   width: var(--wizardWidth);
   z-index: 1;
+  pointer-events: auto;
 }
 .wtw_wizard.bga-animations_animated {
   z-index: 11 !important;
